# cloudflare-security-group-updater

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  sg-policy.json
.github/scripts/: set-pip-versions.sh  update-local-chart.sh
.github/workflows/: docker-build.yaml
helm/: Chart.yaml  values.yaml
src/updater/: main.py
