[metadata]
name = cloudflare-security-group-updater
version = 0.0.1
author = John McCracken, Ryan Gibbons, Endrigo Antonini, Hubble developers
author_email = dev@hubbleprotocol.io
description = An agent to automatically update AWS security group ingress rules with the latest Cloudflare proxy IPs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hubbleprotocol/cloudflare-security-group-updater
project_urls =
    Bug Tracker = https://github.com/hubbleprotocol/cloudflare-security-group-updater/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
